--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>Introdução Alimentar</title>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Introdução Alimentar</title>
+</head>
 <body>
-    
-</body>
-</html>
+  </html>
 <h1>INTRODUÇÃO ALIMENTAR</h1>
 <p>Aos <b>6 meses de idade se inicia a Introdução Alimentar,</b> de acordo com as orientações da Organização Mundial da Saúde e da Sociedade Brasileira de Pediatria. Até essa idade, o leite materno é o principal e único alimento que deve ser ingerido pelo bebê, com exceção da fórmula infantil quando a mamãe não puder amamentar.</p>
 <p>A partir daí, surge a necessidade da criança receber novos alimentos, macro e micro nutrientes, e por isso, é o momento de apresentar os primeiros sabores e enfrentar os desafios da Introdução Alimentar!</p>
-<
+<body>
+</html>
