--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <h1>INTRODUÇÃO ALIMENTAR</h1>
 <p>Aos <b>6 meses de idade se inicia a Introdução Alimentar,</b> de acordo com as orientações da Organização Mundial da Saúde e da Sociedade Brasileira de Pediatria. Até essa idade, o leite materno é o principal e único alimento que deve ser ingerido pelo bebê, com exceção da fórmula infantil quando a mamãe não puder amamentar.</p>
 <p>A partir daí, surge a necessidade da criança receber novos alimentos, macro e micro nutrientes, e por isso, é o momento de apresentar os primeiros sabores e enfrentar os desafios da Introdução Alimentar!</p>
-<body>
+</body>
 </html>
