--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Introdução Alimentar</title>
 </head>
 <body>
-  </html>
-<h1>INTRODUÇÃO ALIMENTAR</h1>
-<p>Aos <b>6 meses de idade se inicia a Introdução Alimentar,</b> de acordo com as orientações da Organização Mundial da Saúde e da Sociedade Brasileira de Pediatria. Até essa idade, o leite materno é o principal e único alimento que deve ser ingerido pelo bebê, com exceção da fórmula infantil quando a mamãe não puder amamentar.</p>
-<p>A partir daí, surge a necessidade da criança receber novos alimentos, macro e micro nutrientes, e por isso, é o momento de apresentar os primeiros sabores e enfrentar os desafios da Introdução Alimentar!</p>
+
+ 
+<h1 id="titulo"> INTRODUÇÃO ALIMENTAR</h1>
+<p class="texto">Aos <b>6 meses de idade se inicia a Introdução Alimentar,</b> de acordo com as orientações da Organização Mundial da Saúde e da Sociedade Brasileira de Pediatria. Até essa idade, o leite materno é o principal e único alimento que deve ser ingerido pelo bebê, com exceção da fórmula infantil quando a mamãe não puder amamentar.</p>
+<p class="texto">A partir daí, surge a necessidade da criança receber novos alimentos, macro e micro nutrientes, e por isso, é o momento de apresentar os primeiros sabores e enfrentar os desafios da Introdução Alimentar!</p>
 </body>
 </html>
