lista ordenada e não

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <img id="imagem1" src="Introdução Alimentar Augusto1.png" alt="criança almoçando"> 
 
 <ol>
-    <li>criança</li>
-    <li>Alimentaçãosaudável</li>
+    <li>Criança</li>
+    <li>Alimentação Saudável</li>
 </ol>
 
 <ul>
-   <li>Até2ano</li>
-   <li>Após2anos</li>
+   <li>Até 2 anos</li>
+   <li>Após 2 anos</li>
 
 </ul>
 
