--- a/index.html
+++ b/index.html
@@ -7,25 +7,34 @@
     <title>Introdução Alimentar</title>
 </head>
 <body>
+
 <section class="inicio">
-     <h1 id="titulo"> INTRODUÇÃO ALIMENTAR</h1>
+     <h1 id="titulo">INTRODUÇÃO ALIMENTAR</h1>
 </section>    
 
-<section class="texto"><p class="texto">Aos <b>6 meses de idade se inicia a Introdução Alimentar,</b> de acordo com as orientações da Organização Mundial da Saúde e da Sociedade Brasileira de Pediatria. Até essa idade, o leite materno é o principal e único alimento que deve ser ingerido pelo bebê, com exceção da fórmula infantil quando a mamãe não puder amamentar.</p>
-    <p class="texto">A partir daí, surge a necessidade da criança receber novos alimentos, macro e micro nutrientes, e por isso, é o momento de apresentar os primeiros sabores e enfrentar os desafios da Introdução Alimentar!</p>
-    <img id="imagem1" src="Introdução Alimentar Augusto1.png" alt="criança almoçando"> 
+<section class="texto">
+    <div class= paragráfo>
+        <p class="texto">Aos <b>6 meses de idade se inicia a Introdução Alimentar,</b> de acordo com as orientações da Organização Mundial da Saúde e da Sociedade Brasileira de Pediatria. Até essa idade, o leite materno é o principal e único alimento que deve ser ingerido pelo bebê, com exceção da fórmula infantil quando a mamãe não puder amamentar.</p>
+        <p class="texto">A partir daí, surge a necessidade da criança receber novos alimentos, macro e micro nutrientes, e por isso, é o momento de apresentar os primeiros sabores e enfrentar os desafios da Introdução Alimentar!</p>
+        <img id="imagem1" src="Introdução Alimentar Augusto1.png" alt="criança almoçando"> 
 </section>   
+    </div>
 
 <section class="listas">
-    <ol>
-        <li>Criança</li>
-        <li>Alimentação Saudável</li>
-    </ol>
-
-    <ul>
-        <li>Até 2 anos</li>
-        <li>Após 2 anos</li>
-    </ul>
+    <div class= lista1>
+        <ol>
+            <li>Criança</li>
+            <li>Alimentação Saudável</li>
+        </ol>
+    </div>    
+        
+    <div class= lista2>
+         <ul>
+            <li>Até 2 anos</li>
+            <li>Após 2 anos</li>
+        </ul>
+    </div>
 </section>
+
 </body>
 </html>
