--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>    
         
     <div class= lista2>
-         <ul>
+         <ul class="lista3">
             <li>Até 2 anos</li>
             <li>Após 2 anos</li>
         </ul>
