--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     
+    <header class= "cabecalho">   
+        <h1 id="titulo">INTRODUÇÃO ALIMENTAR</h1>
+        <img id="imagem1" src="Introdução Alimentar Augusto1.png" alt="criança almoçando"> 
+    </header>
+
 <section class="inicio">
      <h1 id="titulo">INTRODUÇÃO ALIMENTAR</h1>
 </section>    
@@ -17,11 +22,7 @@
         <p class="texto">Aos <b>6 meses de idade se inicia a Introdução Alimentar,</b> de acordo com as orientações da Organização Mundial da Saúde e da Sociedade Brasileira de Pediatria. Até essa idade, o leite materno é o principal e único alimento que deve ser ingerido pelo bebê, com exceção da fórmula infantil quando a mamãe não puder amamentar.</p>
         <p class="texto">A partir daí, surge a necessidade da criança receber novos alimentos, macro e micro nutrientes, e por isso, é o momento de apresentar os primeiros sabores e enfrentar os desafios da Introdução Alimentar!</p>
     
-    <header class= "cabecalho">   
-        <img id="imagem1" src="Introdução Alimentar Augusto1.png" alt="criança almoçando"> 
-    </header>
-
-</section>   
+   </section>   
     </div>
 
 <section class="listas">
